--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 </body>
-{% block scripts %} {{ block.super }}
+{% block scripts %}
 <script src="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/jquery@3.7.1/jquery.min.js' %}" type="text/javascript"></script>
 
