--- a/tethysapp/wqm/templates/wqm/pages/report.html
+++ b/tethysapp/wqm/templates/wqm/pages/report.html
@@ -1,5 +1,18 @@
 {% extends "wqm/base.html" %}
+{% load static %}
 
 {% block content %}
 <p>Report</p>
+{% endblock %}
+
+{% block styles %}
+{{ block.super }}
+
+
+{% endblock %}
+
+
+{% block scripts %}
+{{ block.super }}
+
 {% endblock %}
