--- a/tethysapp/wqm/public/css/main.css
+++ b/tethysapp/wqm/public/css/main.css
@@ -34,6 +34,7 @@ body>div:first-child {
     color: #fff;
     justify-content: space-between;
     width: 100%;
+    position: fixed;
 }
 
 
@@ -79,5 +80,6 @@ body>div:first-child {
 }
 
 .content {
+    margin-top: 48px;
     height: calc(100% - 48px);
 }
