--- a/tethysapp/wqm/templates/wqm/pages/home.html
+++ b/tethysapp/wqm/templates/wqm/pages/home.html
@@ -1,12 +1,18 @@
 {% extends "wqm/base.html" %}
+{% load static %}
 
 {% block content %}
-<h1>Welcome to your Tethys App!</h1>
-<p>Take advantage of beautiful typography to organize the content of your app:</p>
-<h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
+<iframe class="dashboard-box" src="https://dashboard.mkdc.vn/superset/dashboard/p/wo4GgpRvPzX?standalone=3&show_filters=0" frameborder="0"></iframe>
+{% endblock %}
+
+{% block styles %}
+{{ block.super }}
+<link href="{% static 'wqm/css/pages/home.css' %}" rel="stylesheet" />
+
+{% endblock %}
+
+
+{% block scripts %}
+{{ block.super }}
+
 {% endblock %}
