--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -9,6 +9,8 @@
 
   {% block styles %}
   <link rel="stylesheet" href="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.min.css' %}" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
   <link href="{% static 'wqm/css/main.css' %}" rel="stylesheet" />
   {% endblock %}
 </head>
