--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -51,6 +51,18 @@
     </div>
   </div>
 </body>
+
+{% block templates %}
+<template id="loading-component">
+    <div class="loading loading--block" style="opacity: 0.6;">
+        <div class="loading__icon spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+</template>
+{% endblock %}
+
+
 {% block scripts %}
 <script src="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/jquery@3.7.1/jquery.min.js' %}" type="text/javascript"></script>
