--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -27,11 +27,15 @@
 </div>
 
 {% endblock %} {% block styles %} {{ block.super }}
+
+<link href="{% static 'wqm/vendors/datatables@2.0.7/dataTables.css' %}" rel="stylesheet" />
 <link href="{% static 'wqm/css/pages/administration.css' %}" rel="stylesheet" />
 
 {% endblock %} 
 
 {% block scripts %} {{ block.super }} 
+
+<script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/pages/administration.js' %}" type="text/javascript"></script>
 
 {% endblock %}
