--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -29,6 +29,7 @@
 {% endblock %} {% block styles %} {{ block.super }}
 
 <link href="{% static 'wqm/vendors/datatables@2.0.7/dataTables.css' %}" rel="stylesheet" />
+<link href="{% static 'wqm/vendors/maplibre-gl@4.3.1/maplibre-gl.css' %}" rel="stylesheet" />
 <link href="{% static 'wqm/css/pages/administration.css' %}" rel="stylesheet" />
 
 {% endblock %} 
@@ -36,6 +37,8 @@
 {% block scripts %} {{ block.super }} 
 
 <script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/vendors/maplibre-gl@4.3.1/maplibre-gl.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/pages/administration.js' %}" type="text/javascript"></script>
-
+<script src="{% static 'wqm/js/components/administration/license_map.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/js/components/administration/license.js' %}" type="text/javascript"></script>
 {% endblock %}
