Giao diện giấy phép

--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -30,15 +30,9 @@
             </li>
           </a>
 
-          <a class="nav-bar__item" id="report-menu" href="/apps/wqm/report">
-            <li>
-              Thống kê - Báo cáo
-            </li>
-          </a>
-
           <a class="nav-bar__item" id="admin-menu" href="/apps/wqm/administration">
             <li>
-              Quản trị
+              <i class="bi bi-gear-fill"></i>
             </li>
           </a>
 
