--- a/tethysapp/wqm/public/css/pages/administration.css
+++ b/tethysapp/wqm/public/css/pages/administration.css
@@ -64,10 +64,12 @@ div.dt-container .dt-search input {
 
 #content-box__license-detail {
     padding-top: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 #content-box__license-detail .btn {
-    padding: 0px 0px 10px 0px;
+    padding: 0px 0px 8px 0px;
 }
 
 #content-box__license-detail .btn i{
@@ -76,7 +78,7 @@ div.dt-container .dt-search input {
 
 #content-box__license-detail #license-map {
     width: 100%;
-    height: calc(100% - 54px);
+    flex: 1;
     position: relative;
 }
 
@@ -84,13 +86,15 @@ div.dt-container .dt-search input {
     position: absolute;
     top: 8px;
     left: 8px;
+    bottom: 8px;
+    display: flex;
+    flex-direction: column;
     background-color: white;
     border: 1px solid #ccc;
     padding: 10px;
     z-index: 1;
     width: 480px;
     overflow: auto;
-
 }
 
 #point-data tr td:first-child {
@@ -110,5 +114,29 @@ div.dt-container .dt-search input {
 }
 
 #point-data table {
-    margin-bottom: 0;
+    margin-bottom: 8px;
+}
+
+.filter-box {
+    display: flex;
+    gap: 8px;
+    margin-bottom: 8px;
+}
+
+.filter-box__item {
+    width: 25%;
+}
+
+.filter-box__item label {
+    margin-bottom: 4px;
+}
+
+.filter-box__item input, .filter-box__item select {
+    border-radius: 0px;
+}
+
+#total-fow-chart {
+    flex: 1;
+    width: 100%;
+    margin: 4px 0;
 }
