--- a/tethysapp/wqm/templates/wqm/components/administration/license.html
+++ b/tethysapp/wqm/templates/wqm/components/administration/license.html
@@ -1,12 +1,47 @@
 <div class="content-box__content" id="content-box__license">
     <div class="alert alert-info" role="alert">
-        <b>Tổng số Giấy phép: <span id="licenses-total"></span></b> - Còn hạn: <span id="licenses-valid"></span> - Sắp
-        hết hạn: <span id="licenses-expiring-soon"></span> - Hết hạn: <span id="licenses-expired"></span>
+        <b>Tổng số Giấy phép: <span id="licenses-total"></span></b> - Còn hạn: <span id="licenses-valid"></span> - Sắp hết hạn: <span id="licenses-expiring-soon"></span> - Hết hạn: <span id="licenses-expired"></span>
     </div>
-    <table id="licenses-table" class="table table-bordered" cellspacing="8" width="100%"></table>
+    <div>
+        <div class="filter-box">
+            <div class="filter-box__item">
+                <label for="keyword">Từ khóa</label>
+                <input class="form-control" id="keyword" placeholder="Nhập từ khoá tìm kiếm" />
+            </div>
+            <div class="filter-box__item">
+                <label for="license-province">Tỉnh</label>
+                <select id="license-province" class="form-control" aria-label="Default select example">
+                    <option selected>Tất cả</option>
+                    <option value="1">Còn hạn</option>
+                    <option value="2">Sắp hết hạn</option>
+                    <option value="3">Hết hạn</option>
+                </select>
+            </div>
+            <div class="filter-box__item">
+                <label for="license-status">Trạng thái giấy phép</label>
+                <select id="license-status" class="form-control" aria-label="Default select example">
+                    <option selected>Tất cả</option>
+                    <option value="1">Còn hạn</option>
+                    <option value="2">Sắp hết hạn</option>
+                    <option value="3">Hết hạn</option>
+                </select>
+            </div>
+            <div class="filter-box__item">
+                <label for="license-monitor">Trạng thái giám sát</label>
+                <select id="license-monitor" class="form-control" aria-label="Default select example">
+                    <option selected>Tất cả</option>
+                    <option value="1">Đang giám sát</option>
+                    <option value="2">Không giám sát</option>
+                </select>
+            </div>
+        </div>
+        <table id="licenses-table" class="table table-bordered" cellspacing="8" width="100%"></table>
+    </div>
+
 </div>
 
-<div class="content-box__content  d-none" id="content-box__license-detail">
+
+<div class="content-box__content d-none" id="content-box__license-detail">
     <div>
         <button type="button" class="btn" onclick="on_close_license_detail_click()"><i class="bi bi-x"></i></button>
         <b style="font-size: 16px; margin-left: 4px;">Chi tiết Giấy phép</b>
@@ -35,20 +70,22 @@
         </tbody>
     </table>
 
-
     <div id="license-map">
         <div id="point-data" class="d-none">
             <div class="point-data__nav">
                 <h6>Thông tin điểm khai thác</h6>
                 <div id="point-data__close-btn">
-                  <i class="bi bi-x"></i>
+                    <i class="bi bi-x"></i>
                 </div>
-              </div>
+            </div>
 
             <table class="table table-bordered table-striped">
-                <tbody>
-                </tbody>
+                <tbody></tbody>
             </table>
+
+            <p>Lưu lượng khai thác trong 24h qua: <b id="total-flow-text"></b></p>
+            <canvas id="total-fow-chart"></canvas>
+            <p id="total-flow-analysis"></p>
         </div>
     </div>
 </div>
