--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -6,7 +6,7 @@
     </div>
     <div class="menu-box__item" id="menu-sensor">
         <i class="bi bi-hdd-network-fill"></i>
-        <p>Thiết lập cảm biến</p>
+        <p>Thiết lập điểm quan trắc</p>
     </div>
     <div class="menu-box__item" id="menu-config">
         <i class="bi bi-gear-wide-connected"></i>
@@ -38,6 +38,8 @@
 
 <script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/maplibre-gl@4.3.1/maplibre-gl.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/vendors/chartjs@3.0.0/chart.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/vendors/chartjs@3.0.0/chartjs_plugin_datalabels.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/pages/administration.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/license_map.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/license.js' %}" type="text/javascript"></script>
