--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -10,7 +10,7 @@
   {% block styles %}
   <link rel="stylesheet" href="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-
+  <link rel="icon" type="image/x-icon" href="{% static 'wqm/images/favicon.ico' %}">
   <link href="{% static 'wqm/css/main.css' %}" rel="stylesheet" />
   {% endblock %}
 </head>
