--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -4,7 +4,7 @@
         <i class="bi bi-file-earmark-fill"></i>
         <p>Giấy phép Tài nguyên nước</p>
     </div>
-    <div class="menu-box__item" id="menu-sensor">
+    <div class="menu-box__item" id="menu-monitor-station">
         <i class="bi bi-hdd-network-fill"></i>
         <p>Thiết lập điểm quan trắc</p>
     </div>
@@ -18,8 +18,8 @@
 {% include 'wqm/components/administration/license.html' %}
 </div>
 
-<div class="content-box d-none" id="content-menu-sensor">
-    {% include 'wqm/components/administration/sensor.html' %}
+<div class="content-box d-none" id="content-menu-monitor-station">
+    {% include 'wqm/components/administration/monitor_station.html' %}
 </div>
 
 <div class="content-box d-none" id="content-menu-config">
@@ -43,4 +43,6 @@
 <script src="{% static 'wqm/js/pages/administration.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/license_map.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/license.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/js/components/administration/monitor_station.js' %}" type="text/javascript"></script>
+
 {% endblock %}
