--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -14,11 +14,11 @@
     </div>
 </div>
 
-<div class="content-box" id="content-menu-license">
+<div class="content-box d-none" id="content-menu-license">
 {% include 'wqm/components/administration/license.html' %}
 </div>
 
-<div class="content-box d-none" id="content-menu-monitor-station">
+<div class="content-box " id="content-menu-monitor-station">
     {% include 'wqm/components/administration/monitor_station.html' %}
 </div>
 
