--- a/tethysapp/wqm/templates/wqm/components/administration/license.html
+++ b/tethysapp/wqm/templates/wqm/components/administration/license.html
@@ -84,7 +84,7 @@
             </table>
 
             <p>Lưu lượng khai thác trong 24h qua: <b id="total-flow-text"></b></p>
-            <canvas id="total-fow-chart"></canvas>
+            <canvas id="total-flow-chart"></canvas>
             <p id="total-flow-analysis"></p>
         </div>
     </div>
