--- a/tethysapp/wqm/templates/wqm/components/administration/monitor_station.html
+++ b/tethysapp/wqm/templates/wqm/components/administration/monitor_station.html
@@ -41,7 +41,7 @@
 </div>
 
 
-<div class="content-box__content" id="content-box__monitor-station-add">
+<div class="content-box__content " id="content-box__monitor-station-add">
     <div>
         <button type="button" class="btn" onclick="on_close_btn_click('content-box__monitor-station-add')"><i class="bi bi-x"></i></button>
         <b style="font-size: 16px; margin-left: 4px;">Thêm mới điểm quan trắc</b>
@@ -64,7 +64,7 @@
             <div class="col-md-6 form-item mb-3">
                 <label for="ms-province" class="form-label">Tỉnh</label>
                 <select id="ms-province" class="form-select">
-                    <option selected value="1">Tỉnh Trà Vinh</option>
+                    <option selected value="1">Tỉnh Kiên Giang</option>
                     <option value="2">Tỉnh Vĩnh Long</option>
                 </select>
             </div>
@@ -86,10 +86,55 @@
             <div class="col-md-6 form-item mb-3">
                 <label for="ms-config" class="form-label">Cấu hình</label>
                 <select id="ms-config" class="form-select" aria-label="Chọn cấu hình">
-                    <option selected value="1">Điểm quan trắc nước mặt</option>
-                    <option value="2">Điểm quan trắc nước dưới đất</option>
+                    <option selected value="1">Cấu hình điểm quan trắc Trạm Rạch Giá</option>
+                    <option value="2">Cấu hình điểm quan trắc Trạm Trần Đề</option>
                 </select>
             </div>
+
+            <p class="mb-2"><b>Bảng thông số theo cấu hình</b></p>
+            <div class="form-item">
+                <table class="table table-striped table-bordered">
+                    <thead class="table-light">
+                        <th>STT</th>
+                        <th>Mã thông số</th>
+                        <th>Tên thông số</th>
+                        <th>Đơn vị đo</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>pH</td>
+                            <td>Độ pH</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>COD</td>
+                            <td>Nhu cầu oxy sinh hoá</td>
+                            <td>mgO2/l</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>DO</td>
+                            <td>Nhiệt độ</td>
+                            <td>Độ C</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Hg</td>
+                            <td>Thủy ngân</td>
+                            <td>µg/L</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Coliform</td>
+                            <td>Coliform</td>
+                            <td>MPN</td>
+                        </tr>
+                    </tbody>
+                  </table>
+            </div>
+
         </div>
         <div class="d-flex" style="justify-content: end;">
             <button type="submit" class="btn btn-success btn-block mt-3">
@@ -110,4 +155,21 @@
         <b style="font-size: 16px; margin-left: 4px;">Bản đồ Điểm quan trắc</b>
     </div>
 
+    <div id="ms-map">
+        <div id="ms-data" class="d-none">
+            <div class="ms-data__nav">
+                <h6>Thông tin điểm quan trắc</h6>
+                <div id="ms-data__close-btn">
+                    <i class="bi bi-x"></i>
+                </div>
+            </div>
+
+            <table class="table table-bordered table-striped">
+                <tbody></tbody>
+            </table>
+
+            <p class="mt-2 mb-2"><b>Biểu đồ Giá trị WQI tại điểm quan trắc trong 30 ngày qua</b></p>
+            <canvas id="wqi-chart"></canvas>
+        </div>
+    </div>
 </div>
