--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -44,5 +44,6 @@
 <script src="{% static 'wqm/js/components/administration/license_map.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/license.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/monitor_station.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/js/components/administration/monitor_station_map.js' %}" type="text/javascript"></script>
 
 {% endblock %}
