--- a/tethysapp/wqm/templates/wqm/components/administration/license.html
+++ b/tethysapp/wqm/templates/wqm/components/administration/license.html
@@ -12,9 +12,19 @@
                 <label for="license-province">Tỉnh</label>
                 <select id="license-province" class="form-control" aria-label="Default select example">
                     <option selected>Tất cả</option>
-                    <option value="1">Còn hạn</option>
-                    <option value="2">Sắp hết hạn</option>
-                    <option value="3">Hết hạn</option>
+                    <option value="1">Tỉnh Trà Vinh</option>
+                    <option value="2">Tỉnh An Giang</option>
+                    <option value="3">Tỉnh Bạc Liêu</option>
+                    <option value="4">Tỉnh Bến Tre</option>
+                    <option value="5">Tỉnh Cà Mau</option>
+                    <option value="6">Tỉnh Đồng Tháp</option>
+                    <option value="7">Tỉnh Hậu Giang</option>
+                    <option value="8">Tỉnh Kiên Giang</option>
+                    <option value="9">Tỉnh Long An</option>
+                    <option value="10">Tỉnh Sóc Trăng</option>
+                    <option value="11">Tỉnh Tiền Giang</option>
+                    <option value="12">Tỉnh Vĩnh Long</option>
+                    <option value="13">Thành phố Cần Thơ</option>
                 </select>
             </div>
             <div class="filter-box__item">
