--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -14,11 +14,11 @@
     </div>
 </div>
 
-<div class="content-box d-none" id="content-menu-license">
+<div class="content-box" id="content-menu-license">
 {% include 'wqm/components/administration/license.html' %}
 </div>
 
-<div class="content-box " id="content-menu-monitor-station">
+<div class="content-box d-none" id="content-menu-monitor-station">
     {% include 'wqm/components/administration/monitor_station.html' %}
 </div>
 
@@ -40,7 +40,7 @@
 <script src="{% static 'wqm/vendors/datatables@2.0.7/dataTables.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/maplibre-gl@4.3.1/maplibre-gl.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/chartjs@3.0.0/chart.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'wqm/vendors/chartjs@3.0.0/chartjs_plugin_datalabels.js' %}" type="text/javascript"></script>
+
 <script src="{% static 'wqm/js/pages/administration.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/license_map.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/license.js' %}" type="text/javascript"></script>
