--- a/tethysapp/wqm/public/css/pages/administration.css
+++ b/tethysapp/wqm/public/css/pages/administration.css
@@ -20,6 +20,10 @@
     font-weight: bold;
 }
 
+.menu-box__item:hover {
+    cursor: pointer;
+}
+
 .menu-box__item p {
     margin-top: 1px;
     margin-left: 8px;
@@ -236,4 +240,47 @@ div.dt-container .dt-search input {
 #ms-detail-modal .modal-content button{
     font-size: 10px;
     border-radius: 0;
+}
+
+#content-box__config {
+    font-size: 14px;
+}
+
+.config-update-button-box {
+    display: flex;
+    justify-content: end;
+}
+
+.config-update-button-box .btn {
+    border-radius: 0px;
+    padding: 4px 12px;
+    font-size: 14px;
+}
+
+.circle-color {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.td-color {
+    display: flex;
+    align-items: center;
+}
+
+.config-control {
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+}
+
+#wqi-lookup-table, #params-table, #notify-table {
+    font-size: 12px;
+}
+
+#notify-table textarea {
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 4px;
 }
