--- a/tethysapp/wqm/templates/wqm/pages/administration.html
+++ b/tethysapp/wqm/templates/wqm/pages/administration.html
@@ -26,7 +26,6 @@
     {% include 'wqm/components/administration/config.html' %}
 </div>
 
-
 {% endblock %} {% block styles %} {{ block.super }}
 
 <link href="{% static 'wqm/vendors/datatables@2.0.7/dataTables.css' %}" rel="stylesheet" />
@@ -46,5 +45,7 @@
 <script src="{% static 'wqm/js/components/administration/license.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/monitor_station.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/js/components/administration/monitor_station_map.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/js/components/administration/config.js' %}" type="text/javascript"></script>
+
 
 {% endblock %}
