--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -60,6 +60,8 @@
 {% block scripts %}
 <script src="{% static 'wqm/vendors/bootstrap@5.3.3/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'wqm/vendors/jquery@3.7.1/jquery.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'wqm/vendors/jquery@3.7.1/jquery-ui.min.js' %}" type="text/javascript"></script>
+
 
 <script src="{% static 'wqm/js/main.js' %}" type="text/javascript"></script>
 
