--- a/tethysapp/wqm/templates/wqm/components/administration/license.html
+++ b/tethysapp/wqm/templates/wqm/components/administration/license.html
@@ -56,7 +56,7 @@
         <b style="font-size: 16px; margin-left: 4px;">Chi tiết Giấy phép</b>
     </div>
 
-    <table class="table table-bordered wqi-lookup-show-item text-center" id="wqi-lookup-table">
+    <table class="table table-bordered" id="license-detail-table">
         <thead>
             <tr>
                 <td scope="col"><b>Số hiệu văn bản</b></td>
