--- a/tethysapp/wqm/templates/wqm/base.html
+++ b/tethysapp/wqm/templates/wqm/base.html
@@ -24,11 +24,11 @@
       </div>
       <div class="header-bar__right">
         <ul class="nav-bar">
-          <a class="nav-bar__item" id="home-menu" href="/apps/wqm">
+          <!-- <a class="nav-bar__item" id="home-menu" href="/apps/wqm">
             <li>
               Bảng tổng quan
             </li>
-          </a>
+          </a> -->
 
           <a class="nav-bar__item" id="admin-menu" href="/apps/wqm/administration">
             <li>
@@ -37,6 +37,9 @@
           </a>
 
         </ul>
+
+        <div class="header-user__avatar"><img src="{% static 'wqm/images/avatar.png' %}" alt="Avatar" /></div>
+        
       </div>
     </div>
 
