--- a/tethysapp/wqm/templates/wqm/pages/home.html
+++ b/tethysapp/wqm/templates/wqm/pages/home.html
@@ -6,7 +6,6 @@
 <div class="alert alert-warning">
     <div class="">
         <p class="title">Bảng tổng quan</p>
-
         <p class="sub-title">Tần suất: 24h/lần (Cập nhật lần cuối lúc 07:00 21/07/2024)</p>
     </div>
     <div>
@@ -37,7 +36,9 @@
             <table class="table table-bordered table-striped">
                 <tbody><tr><td>Mã trạm</td><td>87-NM07</td></tr><tr><td>Số hiệu</td><td>NM07</td></tr><tr><td>Vị trí</td><td>Rạch Thông Tây</td></tr><tr><td>Kinh độ</td><td>105.749533333333 </td></tr><tr><td>Vĩ độ</td><td>10.3245666666667 </td></tr><tr><td>Loại trạm</td><td>Quan trắc nước mặt</td></tr><tr><td>Trạng thái</td><td>Đang hoạt động </td></tr></tbody>
             </table>
-            <p>Chỉ số chất lượng nước hiện tại: <b id="wqi-text">69</b></p>
+            <div>
+                <p class="mb-2 mt-2">Chỉ số chất lượng nước hiện tại: <b id="wqi-text">69</b></p>
+            </div>
             <canvas id="wqi-chart"></canvas>
         </div>
 
