--- a/tethysapp/wqm/templates/wqm/components/administration/monitor_station.html
+++ b/tethysapp/wqm/templates/wqm/components/administration/monitor_station.html
@@ -1,5 +1,7 @@
 <div class="content-box__content" id="content-box__monitor-station">
-    <h6>Danh sách Điểm quan trắc</h6>
+    <div class="alert alert-info" role="alert">
+        <b>Danh sách Điểm quan trắc</b>
+    </div>
     <div>
         <div class="filter-box">
             <div class="filter-box__item">
